--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ table {
     font-weight: bold;
     border-bottom: 2px solid #436e7d;
   }
-  ttd {
+  td {
     padding: 10px;
     text-align: center;
   }
