--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,8 @@ table {
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
   }
   th {
     background-color: #436e7d;
@@ -47,7 +49,7 @@ table {
   }
   td {
     padding: 10px;
-    text-align: center;
+    text-align: left;
   }
   
   th {
